# CellularAutomaton

./: .gitignore  CMakeLists.txt  DrawAutomaton.cpp  DrawAutomaton.hpp  Readme.md  main.cpp
Source/: CellularAutomaton.cpp  CellularAutomaton.hpp
